# Numerik-III

./: .gitignore  .pre-commit-config.yaml  conf.typ  pyproject.toml
Exercise 01/: Haotian_Luheng_Ruoxi_Aoxing_03.typ
Exercise 02/: HW2_Haotian_Luheng_Ruoxi_Aoxing.typ  Haotian_Luheng_Ruoxi_Aoxing_03.typ  Q4.ipynb
Exercise 03/: HW3_Haotian_Luheng_Ruoxi_Aoxing.typ
Exercise 04/: HW4_Haotian_Luheng_Ruoxi_Aoxing.typ  Q2.ipynb
